[metadata]
name = fastdraw
summary = Asterisk dialplan generator
description-file =
    README.rst
author = Paul Belanger
author-email = paul.belanger@polybeacon.com
home-page = https://github.com/pabelanger/fastdraw
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    fastdraw

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[pbr]
warnerrors = True

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = fastdraw/locale
domain = fastdraw

[update_catalog]
domain = fastdraw
output_dir = fastdraw/locale
input_file = fastdraw/locale/fastdraw.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = fastdraw/locale/fastdraw.pot
