[metadata]
name = fastdraw
summary = Metrics, events, and analytics for the Kickstand Project
description-file =
    README.rst
author = Paul Belanger
author-email = paul.belanger@polybeacon.com
home-page = https://github.com/pabelanger/fastdraw
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[entry_points]
console_scripts =
    fastdraw-manage = fastdraw.cmd.manage:main
    fastdraw-notification = fastdraw.cmd.notification:main

fastdraw.notification =
    queue_caller = fastdraw.payload.notifications:QueueCaller
    queue_member = fastdraw.payload.notifications:QueueMember

[files]
packages =
    fastdraw

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[pbr]
warnerrors = True

[upload_sphinx]
upload-dir = doc/build/html
